# langchain-plaid

./: README.md
.github/actions/uv_setup/: action.yml
.github/scripts/: check_diff.py  get_min_versions.py
.github/workflows/: _lint.yml  _release.yml  _test.yml  _test_release.yml  check_diffs.yml  extract_ignored_words_list.py
examples/: eval_beir_colbertzero.py  eval_vidore_colmodernvbert.py
libs/plaid/: Makefile  README.md  pyproject.toml
libs/plaid/langchain_plaid/: __init__.py
libs/plaid/langchain_plaid/vectorstores/: __init__.py  plaid.py
libs/plaid/tests/integration_tests/: test_standard.py  test_vectorstore.py
libs/plaid/tests/unit_tests/: test_vectorstore.py
